<resources>
    <string name="app_name">BitcoinTicker</string>
    <string name="coin_icon">This is an icon</string>
    <string name="coin_name">Coin Name</string>
    <string name="coin_price">Coin Price</string>
    <string name="description">Description</string>
    <string name="search_hint">Search</string>
    <string name="list_title">List of Coin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_posta">e-post</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="go_to_login">Go To Login</string>
    <string name="favorites_title">Favorites</string>
    <string name="log_out">Log Out</string>
</resources>