<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.auth.RegisterFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/icon"
        android:contentDescription="@string/coin_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="8dp"
        android:autofillHints=""
        android:hint="@string/e_posta"
        android:inputType="textEmailAddress"
        android:padding="12dp" />

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginHorizontal="32dp"
        android:inputType="textPassword"
        android:padding="12dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnRegisterUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginHorizontal="64dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/register" />

    <Button
        android:id="@+id/btnGoToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginVertical="8dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/go_to_login"  />

</LinearLayout>