<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:src="@drawable/profile_icon"
        android:contentDescription="@string/coin_icon" />

    <Button
        android:id="@+id/buttonFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorites_title"
        android:layout_weight="0.1"
        android:backgroundTint="@color/dark_blue" />

    <Button
        android:id="@+id/logOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:layout_weight="0.1"
        android:backgroundTint="@color/dark_blue" />


</LinearLayout>